--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>戦闘シミュレーター - Game Calculator</title>
+  <title>英雄タイタン評価ツール for Vivid Army</title>
   <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
@@ -959,9 +959,9 @@
           <div className="header">
             <h1>
               <CalculatorIcon />
-              戦闘シミュレーター
+              英雄性能・タイタン評価ツール
             </h1>
-            <p>Combat Analysis & Calculation Tool</p>
+            <p>まだ磁気編成と磁気系特殊効果＋洞察補足鋼砲撃しか適用できてないけど。ｗ</p>
           </div>
 
           <div className="grid">
